--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -71,11 +71,15 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block translated_by_before %}Translated by{% endblock %}
 {% block analysis_by_before %}Analyzed by{% endblock %}
 {% block edited_by_before %}Edited by{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Reviewed and analyzed by{% endblock %}
+{% block analysis_and_editing_by_before %}Analyzed and edited by{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Unedited]{% endblock %}
 
