--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -71,11 +71,15 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block translated_by_before %}Traduit par{% endblock %}
 {% block analysis_by_before %}Analysé par{% endblock %}
 {% block edited_by_before %}Edité par{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Relu et analysé par{% endblock %}
+{% block analysis_and_editing_by_before %}Analysé et edité par{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[non corrigé]{% endblock %}
 
