--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}{% endblock %}
 {% block analysis_by_before %}{% endblock %}
 {% block edited_by_before %}{% endblock %}
+{% block reviewed_and_analyzed_by_before %}{% endblock %}
+{% block analysis_and_editing_by_before %}{% endblock %}
 {% block written_by_after %}によって書かれた。{% endblock %}
 {% block reviewed_by_after %}によってレビュ。{% endblock %}
 {% block translated_by_after %}によって翻訳された。{% endblock %}
 {% block analysis_by_after %}による分析。{% endblock %}
 {% block edited_by_after %}編集。{% endblock %}
+{% block reviewed_and_analyzed_by_after %}によってレビュ と による分析。{% endblock %}
+{% block analysis_and_editing_by_after %}による分析 と 編集。{% endblock %}
 
 {% block unedited %}[未編集]{% endblock %}
 
