--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}Traducido por{% endblock %}
 {% block analysis_by_before %}Análisis por{% endblock %}
 {% block edited_by_before %}Editado por{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Revisado y análisis por{% endblock %}
+{% block analysis_and_editing_by_before %}Análisis y editado por{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[no corregido]{% endblock %}
 
