--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}द्वारा अनुवादिद्त{% endblock %}
 {% block analysis_by_before %}द्वारा विश्लेषित{% endblock %}
 {% block edited_by_before %}द्वारा संपादित{% endblock %}
+{% block reviewed_and_analyzed_by_before %}द्वारा समीक्षित और विश्लेषित{% endblock %}
+{% block analysis_and_editing_by_before %}द्वारा विश्लेषित और संपादित{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[अप्रकाशित]{% endblock %}
 
