--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -71,11 +71,15 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block translated_by_before %}Tradotta da{% endblock %}
 {% block analysis_by_before %}Analizzata da{% endblock %}
 {% block edited_by_before %}Modificato da{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Revisionata e analizzata da{% endblock %}
+{% block analysis_and_editing_by_before %}Analizzata e modificato da{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Inedito]{% endblock %}
 
