--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}Vertaald door{% endblock %}
 {% block analysis_by_before %}Geanalyseerd door{% endblock %}
 {% block edited_by_before %}Bewerkt door{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Beoordeeld en geanalyseerd door{% endblock %}
+{% block analysis_and_editing_by_before %}Geanalyseerd en bewerkt door{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Onuitgegeven]{% endblock %}
 
