--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -71,11 +71,15 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% block translated_by_before %}Traduzido por{% endblock %}
 {% block analysis_by_before %}Análise por{% endblock %}
 {% block edited_by_before %}Editado por{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Revisado e análise por{% endblock %}
+{% block analysis_and_editing_by_before %}Análise e Editado por{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Não editado]{% endblock %}
 
