--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}Переводчики:{% endblock %}
 {% block analysis_by_before %}Аналитики:{% endblock %}
 {% block edited_by_before %}Под редакцией:{% endblock %}
+{% block reviewed_and_analyzed_by_before %}Редакторы и Аналитики:{% endblock %}
+{% block analysis_and_editing_by_before %}Аналитики и Под редакцией:{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Неотредактированная версия]{% endblock %}
 
