--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}Перекладачі: {% endblock %}
 {% block analysis_by_before %}Аналітики: {% endblock %}
 {% block edited_by_before %}Редактори: {% endblock %}
+{% block reviewed_and_analyzed_by_before %}Рецензенти і Аналітики: {% endblock %}
+{% block analysis_and_editing_by_before %}Аналітики і Редактори: {% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Очікує корегування]{% endblock %}
 
