--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -71,11 +71,15 @@
 {% block translated_by_before %}翻譯者：{% endblock %}
 {% block analysis_by_before %}分析者：{% endblock %}
 {% block edited_by_before %}編輯：{% endblock %}
+{% block reviewed_and_analyzed_by_before %}審稿者和分析者：{% endblock %}
+{% block analysis_and_editing_by_before %}分析者和編輯：{% endblock %}
 {% block written_by_after %}{% endblock %}
 {% block reviewed_by_after %}{% endblock %}
 {% block translated_by_after %}{% endblock %}
 {% block analysis_by_after %}{% endblock %}
 {% block edited_by_after %}{% endblock %}
+{% block reviewed_and_analyzed_by_after %}{% endblock %}
+{% block analysis_and_editing_by_after %}{% endblock %}
 
 {% block unedited %}[Unedited]{% endblock %}
 
