--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -62,9 +62,9 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block open %}Apri{% endblock %}
 {% block close %}Chiudi{% endblock %}
 
-{% macro figure_text(metadata, id) %}Figura {{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}Mostra la descrizione della Figura {{ figure_id(metadata, id) }}{% endmacro %}
-{% macro hide_description(metadata, id) %}Nascondi la descrizione della Figura {{ figure_id(metadata, id) }}{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}Figura {{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}Mostra la descrizione della Figura {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}Nascondi la descrizione della Figura {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
 
 {% block written_by_before %}Scritta da{% endblock %}
 {% block reviewed_by_before %}Revisionata da{% endblock %}
