--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -62,9 +62,9 @@
 {% block open %}開く{% endblock %}
 {% block close %}閉じる{% endblock %}
 
-{% macro figure_text(metadata, id) %}図{{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}図{{ figure_id(metadata, id) }}の説明を表示{% endmacro %}
-{% macro hide_description(metadata, id) %}図{{ figure_id(metadata, id) }}の説明を非表示{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}図{{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}図{{ figure_id(metadata, chapter_config, id) }}の説明を表示{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}図{{ figure_id(metadata, chapter_config, id) }}の説明を非表示{% endmacro %}
 
 {% block written_by_before %}{% endblock %}
 {% block reviewed_by_before %}{% endblock %}
