--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -62,9 +62,9 @@
 {% block open %}खोलें{% endblock %}
 {% block close %}बंद करें{% endblock %}
 
-{% macro figure_text(metadata, id) %}खंड {{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}खंड का विवरण देखें {{ figure_id(metadata, id) }}{% endmacro %}
-{% macro hide_description(metadata, id) %}खंड का विवरण छिपाएँ {{ figure_id(metadata, id) }}{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}खंड {{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}खंड का विवरण देखें {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}खंड का विवरण छिपाएँ {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
 
 {% block written_by_before %}द्वारा लिखित{% endblock %}
 {% block reviewed_by_before %}द्वारा समीक्षित{% endblock %}
