--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -62,9 +62,9 @@
 {% block open %}Open{% endblock %}
 {% block close %}Sluit{% endblock %}
 
-{% macro figure_text(metadata, id) %}Figuur {{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}Toon beschrijving van Figuur {{ figure_id(metadata, id) }}{% endmacro %}
-{% macro hide_description(metadata, id) %}Verberg beschrijving van Figuur {{ figure_id(metadata, id) }}{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}Figuur {{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}Toon beschrijving van Figuur {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}Verberg beschrijving van Figuur {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
 
 {% block written_by_before %}Geschreven door{% endblock %}
 {% block reviewed_by_before %}Beoordeeld door{% endblock %}
