--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -62,9 +62,9 @@
 {% block open %}Открыть{% endblock %}
 {% block close %}Закрыть{% endblock %}
 
-{% macro figure_text(metadata, id) %}График {{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}Показать описание графика {{ figure_id(metadata, id) }}{% endmacro %}
-{% macro hide_description(metadata, id) %}Скрыть описание графика {{ figure_id(metadata, id) }}{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}График {{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}Показать описание графика {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}Скрыть описание графика {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
 
 {% block written_by_before %}Авторы:{% endblock %}
 {% block reviewed_by_before %}Редакторы:{% endblock %}
