--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -62,9 +62,9 @@
 {% block open %}開啟{% endblock %}
 {% block close %}關閉{% endblock %}
 
-{% macro figure_text(metadata, id) %}圖表 {{ figure_id(metadata, id) }}.{% endmacro %}
-{% macro show_description(metadata, id) %}顯示圖表說明 {{ figure_id(metadata, id) }}{% endmacro %}
-{% macro hide_description(metadata, id) %}隱藏圖表說明 {{ figure_id(metadata, id) }}{% endmacro %}
+{% macro figure_text(metadata, chapter_config, id) %}圖表 {{ figure_id(metadata, chapter_config, id) }}.{% endmacro %}
+{% macro show_description(metadata, chapter_config, id) %}顯示圖表說明 {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
+{% macro hide_description(metadata, chapter_config, id) %}隱藏圖表說明 {{ figure_id(metadata, chapter_config, id) }}{% endmacro %}
 
 {% block written_by_before %}作者：{% endblock %}
 {% block reviewed_by_before %}審稿者：{% endblock %}
