--- a/src/templates/hi/2020/methodology.html
+++ b/src/templates/hi/2020/methodology.html
@@ -89,7 +89,8 @@
 
         <div class="code-block floating-card">
           {# To generate this markup temporarily add a ```sql code block to a chapter and generate that chapter and you'll get the HTML #}
-          <pre><code class="sql language-sql"><span class="comment">#standardSQL</span>
+          {# Note extra attributes on pre tag to allow keyboard scroll so add them back in #}
+          <pre role="region" aria-label="01_01b.sql" tabindex="0"><code class="sql language-sql"><span class="comment">#standardSQL</span>
 <span class="comment"># 01_01b: Distribution of JS bytes by client</span>
 <span class="keyword">SELECT</span>
   percentile,
