--- a/src/templates/zh-CN/2020/methodology.html
+++ b/src/templates/zh-CN/2020/methodology.html
@@ -89,7 +89,8 @@
 
         <div class="code-block floating-card">
           {# To generate this markup temporarily add a ```sql code block to a chapter and generate that chapter and you'll get the HTML #}
-          <pre><code class="sql language-sql"><span class="comment">#standardSQL</span>
+          {# Note extra attributes on pre tag to allow keyboard scroll so add them back in #}
+          <pre role="region" aria-label="01_01b.sql" tabindex="0"><code class="sql language-sql"><span class="comment">#standardSQL</span>
 <span class="comment"># 01_01b: Distribution of JS bytes by client</span>
 <span class="keyword">SELECT</span>
   percentile,
@@ -311,7 +312,7 @@
       </p>
 
       <p>
-        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。 
+        Wappalyzer为很多章节提供动力，它分析开发人员工具的流行程度，例如 WordPress，Bootstrap，和jQuery。比如 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='ecommerce') }}">电商</a> 和 <a href="{{ url_for('chapter', year=year, lang=lang, chapter='cms') }}">CMS</a> 章节非常依赖于Wappalyzer探测出的各自的 <a href="https://www.wappalyzer.com/categories/ecommerce">电商</a> 和 <a href="https://www.wappalyzer.com/categories/cms">CMS</a> 类别。
       </p>
 
       <p>
@@ -339,7 +340,7 @@
       <h3 id="third-party-web"><a href="#third-party-web" class="anchor-link">第三方资源网络</a></h3>
 
       <p>
-        <a href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019 第三方资源</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。      
+        <a href="https://www.thirdpartyweb.today/">第三方资源网络</a> 是一个研究工程，由 <a href="{{ url_for('contributors', year=year, lang=lang, _anchor='patrickhulce') }}">Patrick Hulce</a>创立，他是<a href="{{ url_for('chapter', year=2019, lang=lang, chapter='third-parties') }}">2019 第三方资源</a> 章节的作者，它使用HTTP Archive和Lighthouse数据来识别和分析第三方资源对网络的影响。
         </p>
 
       <p>
