--- a/src/templates/zh-TW/2020/methodology.html
+++ b/src/templates/zh-TW/2020/methodology.html
@@ -61,7 +61,7 @@
 
         <p>
           Web Almanac 網路年鑑的任務是將網路狀態成為公開的年度知識庫。我們的目標是透過主題專家的洞察語意讓網路社群無障礙的進入 HTTP Archive 資料庫。
-        </p> 
+        </p>
 
         <p>
           Web Almanac 網路年鑑2020年版共有四個部分：內文、體驗、發佈和傳遞。在這當中，每個章節都透過不同角度探索相關主題，例如第二部分探索使用者經驗在效能、隱私、無障礙網頁等各種角度。
@@ -89,7 +89,8 @@
 
         <div class="code-block floating-card">
           {# To generate this markup temporarily add a ```sql code block to a chapter and generate that chapter and you'll get the HTML #}
-          <pre><code class="sql language-sql"><span class="comment">#standardSQL</span>
+          {# Note extra attributes on pre tag to allow keyboard scroll so add them back in #}
+          <pre role="region" aria-label="01_01b.sql" tabindex="0"><code class="sql language-sql"><span class="comment">#standardSQL</span>
 <span class="comment"># 01_01b: Distribution of JS bytes by client</span>
 <span class="keyword">SELECT</span>
   percentile,
