--- a/src/templates/pt/2020/base.html
+++ b/src/templates/pt/2020/base.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    Por favor, aproveite o Web Almanac 2020, o resultado do nosso trabalho de amor pela web. E não deixe de <a href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">oferecer sua ajuda</a> se você quiser se juntar a time.
+    Por favor, aproveite o Web Almanac 2020, o resultado do nosso trabalho de amor pela web. E não deixe de <a hreflang="en" href="https://github.com/HTTPArchive/almanac.httparchive.org/blob/main/CONTRIBUTING.md">oferecer sua ajuda</a> se você quiser se juntar a time.
   </p>
 
   <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, Editor-chefe do Web Almanac</em></p>
