--- a/src/static/css/ebook.css
+++ b/src/static/css/ebook.css
@@ -612,7 +612,7 @@ section.chapter {
 
 #spine .intro-image {
   display: block;
-  margin: 10px auto;
+  padding: 10px;
   width: 100%;
   height: auto;
 }
